# verified-nrkernel

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  erased.rs  spec.rs
.github/workflows/: build-benchmarks.yml  format.yml  verify-and-build.yml  verify.yml
benchmarks/: bench.py  plot.py
benchmarks/lib/bench_utils/: Cargo.toml
benchmarks/single-threaded/: Cargo.toml  README.md
benchmarks/single-threaded/src/: main.rs  nros_vmem.rs
benchmarks/upstream/: scaleout_benchmarks.csv
benchmarks/verified/: Cargo.toml  scaleout_benchmarks.csv
eval/: individual_verification_times  individual_verification_times.sh  times.csv  times_c7565dbc.csv  times_cd6d1957.csv  times_sorted.csv  total_times.csv
notes/: paging_structures_x86.org  recap.md  system-model.md  system-spec.rs  talk-feedback.md
nr/: .gitignore  Cargo.toml  README.md  cyclicbuffer.rs  main.rs  nrspec.rs  simple_log.rs  simple_log_main.rs  simplelog.rs  types.rs  unbounded_log.rs  unbounded_log_main.rs  unbounded_log_refines_simplelog.rs  utils.rs  verify.sh
nr/benchmarks/: Cargo.toml  bench.py  plot.py  run_benchmarks.sh  scaleout_benchmarks.csv
nr/benchmarks/ironsync/benches/ironsync_counter/: main.rs
nr/benchmarks/upstream/: Cargo.toml  scaleout_benchmarks.csv
nr/benchmarks/upstream/benches/nr_counter/: main.rs
nr/benchmarks/upstream/benches/nr_hashmap/: main.rs
nr/benchmarks/upstream/benches/nr_vspace/: main.rs
nr/benchmarks/upstream/verified/benches/nr_counter/: main.rs
nr/benchmarks/upstream/verified/benches/nr_hashmap/: main.rs
nr/benchmarks/verified/: Cargo.toml  rust-toolchain  scaleout_benchmarks.csv
nr/benchmarks/verified/benches/vnr_counter/: main.rs
nr/benchmarks/verified/benches/vnr_vspace/: main.rs
nr/benchmarks/verified/src/: vnr_vspace.rs
nr/spec/: cyclicbuffer_refines_unbounded_log.rs  main.rs  nrspec.rs  rwlock.rs  simple_log.rs  types.rs  unbounded_log.rs  unbounded_log_refines_simplelog.rs  utils.rs
nr/src/: constants.rs  counter.rs  main.rs  pervasive  rwlock.rs  rwlock_dist.rs
nr/verus-nr/: Cargo.toml  main
nr/verus-nr/src/: constants.rs  counter_dispatch_example.rs  lib.rs  main.rs
nr/verus-nr/src/exec/: context.rs  log.rs  mod.rs  replica.rs  rwlock.rs  rwlock_unverified.rs
nr/verus-nr/src/spec/: cyclicbuffer.rs  flat_combiner.rs  linearization.rs  linearization_s.rs  mod.rs  rwlock.rs  rwlock_dist.rs  simple_log.rs  types.rs  unbounded_log.rs  unbounded_log_refines_simplelog.rs
nr/verus-nr/src/upstream/: context.rs
nr/verus-nr/src/upstream/nr/: context.rs  log.rs
page-table/: Cargo.toml  aux_defs.rs  definitions_t.rs  definitions_u.rs  extra.rs  high_level_spec.rs  hlspec_user.rs  individual_verification_times  lib.rs  lib_axiom.rs  lib_u.rs  main.rs  mem.rs  mem_t.rs  memory_types.rs  os_trace.rs  pervasive.rs  pt.rs  pt_u.rs  spec.rs  theorem.rs  verus  x86_64-linux-kernel-module.json
page-table/impl_u/: indexing.rs  l0.rs  l1.rs  l2_impl.rs  l2_refinement.rs  lib.rs  mod.rs  os_refinement.rs  spec_pt.rs
page-table/line_count/: count.py  line_count.txt  manual_count.txt
page-table/preserved-logs/: main.rs.experiment.air  main.rs.experiment.simplified-0.air
page-table/pt_impl/: high_level_pt.rs  impl_spec.rs  l0.rs  l1.rs  l2_impl.rs  l2_refinement.rs  mod.rs
page-table/spec_t/: atomic_mmu.rs  hardware.rs  hlproof.rs  hlspec.rs  impl_spec.rs  map_sm.rs  mem.rs  mod.rs  os.rs  os_invariant.rs
page-table/spec_t/mmu/: common.rs  mod.rs  old-rl2-atomic.rs  pt_mem.rs  rl1.rs  rl2.rs  rl3.rs  rl4.rs
page-table/spec_t_archive/: hardware.rs  mod.rs  replicated_os.rs
page-table/src/: definitions_t.rs  definitions_u.rs  extra.rs  hlspec_user.rs  lib.d  lib.rs  os_trace.rs  theorem.rs
page-table/src/impl_u/: indexing.rs  l0.rs  l1.rs  l2_impl.rs  l2_refinement.rs  mod.rs  os_refinement.rs  verified_impl.rs  wrapped_token.rs
page-table/src/spec_t/: hardware.rs  hlproof.rs  hlspec.rs  mem.rs  mod.rs  os.rs  os_code_vc.rs  os_ext.rs  os_invariant.rs
page-table/src/spec_t/mmu/: defs.rs  mod.rs  old-rl1-atomic-notso.rs  old-rl2-tso.rs  old-rl3.rs  pt_mem.rs  rl1.rs  rl2.rs  rl3.rs  rl3_code.rs  rl4-with-flip.rs  rl4.rs  translation.rs
page-table/src/sts_impl_prototype/: pcm.rs  sts_impl.rs  sts_impl_with_refinement.rs
page-table/system/: mod.rs  os.rs  spec.rs
page-table/x86impl/: mod.rs  page_table.rs  paging.rs
relatedwork/: README.md
tools/: activate.sh  build-verus.sh  doc.sh  format.sh  measure-verification-times.sh  setup-verus.sh  update-verus.sh  verify.sh
verified-node-replication/: Cargo.toml  LICENSE  README.md
verified-node-replication/benchmarks/: .gitignore
verified-node-replication/benchmarks/ironsync/: .gitignore  Cargo.toml
verified-node-replication/benchmarks/lib/bench_utils/src/: topology.rs
verified-node-replication/benchmarks/upstream/: Cargo.toml
verified-node-replication/benchmarks/verified/: rust-toolchain
verified-node-replication/benchmarks/verified/benches/vnr_vspace/: main.rs
verified-node-replication/benchmarks/verified/src/: vnr_vspace.rs
verified-node-replication/src/: constants.rs  counter.rs  lib.rs
verified-node-replication/src/exec/: context.rs  log.rs  mod.rs  replica.rs  rwlock.rs  utils.rs
verified-node-replication/src/spec/: cyclicbuffer.rs  flat_combiner.rs  linearization.rs  mod.rs  rwlock.rs  simple_log.rs  types.rs  unbounded_log.rs  unbounded_log_refines_simplelog.rs  utils.rs
verified-node-replication/tools/: verify-node-replication.sh
verified-node-replication/verified-node-replication/: Cargo.toml
verified-node-replication/verified-node-replication/examples/: counter.rs
verified-node-replication/verified-node-replication/src/: constants.rs  extra.rs
verified-node-replication/verified-node-replication/src/exec/: context.rs  log.rs  replica.rs
verified-node-replication/verified-node-replication/src/spec/: cyclicbuffer.rs  mod.rs  simple_log.rs  unbounded_log.rs  unbounded_log_refines_simplelog.rs
(+38 files in other folders)
