[package]
name = "page-table"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../.verus/source/builtin_macros" }
builtin = { path = "../.verus/source/builtin" }
vstd = { path = "../.verus/source/vstd", features = [], default-features = false }

[lib]
path = "src/lib.rs"
crate-type = [ "staticlib" ]

[features]
impl = []
noreclaim = []
linuxmodule = []
default = ["impl"]

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"
overflow-checks = false
