[package]
name = "page-table"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../.verus/source/builtin_macros" }
builtin = { path = "../.verus/source/builtin" }
state_machines_macros = { path = "../.verus/source/state_machines_macros" }
vstd = { path = "../.verus/source/vstd", features = [], default-features = false }

[lib]
path = "src/lib.rs"
crate-type = [ "staticlib" ]

[features]
impl = []
noreclaim = []
linuxmodule = []
default = ["impl"]

[build]
target = "x86_64-unknown-none"  # for no_std

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"
overflow-checks = false
opt-level = 3
lto = true
