[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev="097ac7ed283ae60375cd9b2b6017b3c629883b2b" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev="097ac7ed283ae60375cd9b2b6017b3c629883b2b" }
vstd = { git = "https://github.com/verus-lang/verus.git", rev="097ac7ed283ae60375cd9b2b6017b3c629883b2b" }

x86 = "*"
verif_pt = { path = "../../page-table", features = ["impl", "noreclaim"] }
