[package]
name = "verus-nr"
version = "0.1.0"
edition = "2021"

[dependencies]
# builtin = { path = "../../verus/source/builtin" }
# builtin_macros = { path = "../../verus/source/builtin_macros" }
# state_machines_macros = { path = "../../verus/source/state_machines_macros" }
# vstd = { path = "../../verus/source/pervasive" }

