[package]
name = "nrspec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86 = "0.52"
node-replication = "0.1.1"
bench_utils = { path = "../../lib/bench_utils",  features = ["unverified"]  }
env_logger = "0.9.0"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3.1"
logging = { version = "0.4", package = "log" }
zipf = "7.0"
mmap = "0.1.*"
libc = "0.2"


[features]
# Make benchmark finish quickly to check if things work:
smokebench = ["bench_utils/smokebench"]
# Very exhaustive parameter sweep (takes a day to run on 4 sockets/192 threads):
exhaustive = ["bench_utils/exhaustive"]

[[bin]]
name = "vspace"
path = "src/nr_vspace.rs"

# [[bench]]
# name = "nr_hashmap"
# harness = false

[[bench]]
name = "nr_counter"
harness = false

[[bench]]
name = "nr_vspace"
harness = false