[package]
name = "ironsync_benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logging = { version = "0.4", package = "log" }
env_logger = "0.9.0"
# nothing yet


[[bench]]
name = "ironsync_counter"
harness = false